tests/samples/positive/types/slice_generic.ax
module slice_generic;

fn first[T](values: []const T) -> T where T: Copy {
    return values[0];
}

fn main() -> i32 {
    var values: [4]i32 = [7, 8, 9, 10];
    let window: []mut i32 = values[1:3];
    return first(window) - 8;
}
